--- a/src/static/js/buy/base_header.html
+++ b/src/static/js/buy/base_header.html
@@ -19,10 +19,8 @@
 </style>
   <div id="da-header" ng-controller="buyLogInOrOutCtrl">
     <!-- 上层 -->
-    <div id="da-header-top">
-      <!-- Container -->
+    <!-- <div id="da-header-top">
       <div class="da-container clearfix">
-        <!-- Logo Container. All images put here will be vertically centere -->
         <div id="da-logo-wrap">
           <div id="da-logo">
             <div id="da-logo-img">
@@ -32,7 +30,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- 下层 -->
     <div id="da-header-bottom">
       <!-- Container -->
@@ -49,12 +47,6 @@
               <a href="/">
                 <i class="icon-home"></i>
                 后台首页
-              </a>
-            </li>
-            <li>
-              <a href="/tools/power_search/">
-                <i class="icon-home"></i>
-                小工具
               </a>
             </li>
           </ul>
