--- a/src/static/js/buy/buy_welcome.html
+++ b/src/static/js/buy/buy_welcome.html
@@ -9,7 +9,7 @@
       <!-- 右侧内容 -->
       <div id="da-content-wrap" class="clearfix">
         <div id="da-content-area">
-      <h3>欢迎使用商业后台系统</h3>
+      <h3>欢迎使用学生就业管理系统</h3>
         </div>
       </div>
     </div>
