--- a/src/static/js/buy/my_add_com_info.html
+++ b/src/static/js/buy/my_add_com_info.html
@@ -16,21 +16,21 @@
               </span>
             </div>
             <div class="da-form da-panel-content da-form-container">
-              <form class="da-form da-form-inline" ng-model="stu.name">
+              <form class="da-form da-form-inline" ng-model="company">
                 <div class="da-form-row">
-                  名&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;称：<input type="text" ng-model="stu.name" required>
+                  名&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;称：<input type="text" ng-model="company.name" required>
                 </div>
                 <div class="da-form-row">
-                  城&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;市：<input type="text" ng-model="stu.sex" required>
+                  城&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;市：<input type="text" ng-model="company.city" required>
                 </div>
                 <div class="da-form-row">
-                  描&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;述：<input type="text" ng-model="stu.age"required>
+                  描&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;述：<input type="text" ng-model="company.description"required>
                 </div>
                 <div class="da-form-row">
-                  公司主页：<input type="text" ng-model="stu.nation" required>
+                  公司主页：<input type="text" ng-model="company.homePage" required>
                 </div>
                 <div class="da-form-row">
-                  邮&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;箱：<input type="text" ng-model="stu.sno" required>
+                  邮&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;箱：<input type="text" ng-model="company.mail" required>
                 </div>
                 <div class="btn-row">
                   <input value="录入" type="submit" class="btn btn-success" ng-click="addComInfo();" style="float:left;">
