--- a/src/static/js/buy/buy_login.html
+++ b/src/static/js/buy/buy_login.html
@@ -41,7 +41,7 @@
     <div class="form-group" style="margin-top:10px;">
       <i class="fa fa-lock">用户类型</i>
       <select ng-model="loginData.type">
-        <option value="1" selected="selected">学生</option>
+        <option value="1">学生</option>
         <option value="2">公司</option>
         <option value="0">管理员</option>
       </select>
