--- a/src/static/js/buy/my_change_stu_info.html
+++ b/src/static/js/buy/my_change_stu_info.html
@@ -19,19 +19,21 @@
               <div class="da-form da-panel-content da-form-container">
                 <form class="da-form da-form-inline" ng-model="stu">
                   <div class="da-form-row">
+                    学&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;号：<input type="text" ng-model="stu.sno">
+                  </div>
+                  <div class="da-form-row">
                     姓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名：<input type="text" ng-model="stu.name">
                   </div>
                   <div class="da-form-row">
-                    性&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;别：<input type="text" ng-model="stu.sex">
+                    性&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;别：
+                    <input type="radio" ng-model="stu.sex" value="1">男
+                    <input type="radio" ng-model="stu.sex" value="0">女
                   </div>
                   <div class="da-form-row">
                     年&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;龄：<input type="text" ng-model="stu.age">
                   </div>
                   <div class="da-form-row">
                     名&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;族：<input type="text" ng-model="stu.nation">
-                  </div>
-                  <div class="da-form-row">
-                    学&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;号：<input type="text" ng-model="stu.sno">
                   </div>
                   <div class="da-form-row">
                     专&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;业：<input type="text" ng-model="stu.major">
@@ -42,8 +44,11 @@
                   <div class="da-form-row">
                     电话号码：<input type="text" ng-model="stu.phoneNumber">
                   </div>
+                  <div class="da-form-row">
+                    密&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;码：<input type="text" ng-model="stu.password">
+                  </div>
                   <div class="btn-row">
-                    <input value="保存修改" type="submit" class="btn btn-success" ng-click="updateSpu();" style="float:left;">
+                    <input value="保存修改" type="submit" class="btn btn-success" ng-click="updateStuInfo();" style="float:left;">
                   </div>
                 </form>
               </div>
