--- a/src/static/js/buy/my_change_com_info.html
+++ b/src/static/js/buy/my_change_com_info.html
@@ -32,8 +32,11 @@
                 <div class="da-form-row">
                   邮&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;箱：<input type="text" ng-model="company.mail" required>
                 </div>
+                <div class="da-form-row">
+                  密&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;码：<input type="text" ng-model="company.password" required>
+                </div>
                 <div class="btn-row">
-                  <input value="保存修改" type="submit" class="btn btn-success" ng-click="updateSpu();" style="float:left;">
+                  <input value="保存修改" type="submit" class="btn btn-success" ng-click="updateComInfo();" style="float:left;">
                 </div>
               </form>
             </div>
