--- a/src/static/js/buy/my_job_info_query.html
+++ b/src/static/js/buy/my_job_info_query.html
@@ -107,7 +107,7 @@
     薪资范围：<input type="text" ng-model="editJob.minSalary">－<input type="text" ng-model="editJob.maxSalary">
   </div>
   <div class="btn-row">
-    <input value="添加" type="submit" class="btn btn-success" ng-click="updateJobInfo();" style="float:left;">
+    <input value="保存" type="submit" class="btn btn-success" ng-click="updateJobInfo();" style="float:left;">
   </div>
 </form>
 </script>
