--- a/src/static/js/buy/my_job_info_list.html
+++ b/src/static/js/buy/my_job_info_list.html
@@ -38,7 +38,7 @@
                           <td>{{job.positionName}}</td>
                           <td>{{job.city}}</td>
                           <td><a target="_blank" class="btn btn-primary" href="javascript:;" ng-click="edit(job)" data-type="topic">编辑</a>
-                          <a target="_blank" class="btn btn-primary audit_topic_block" href="javascript:;" ng-click="delete(job)" data-type="topic" style="margin-left: 20px;">删除</a></td>
+                          <a target="_blank" class="btn btn-primary audit_topic_block" href="javascript:;" ng-click="delJobInfo(job)" data-type="topic" style="margin-left: 20px;">删除</a></td>
                         </tr>
                       </tbody>
                     </table>
