--- a/src/static/js/buy/my_job_info_query.html
+++ b/src/static/js/buy/my_job_info_query.html
@@ -67,7 +67,7 @@
                             <a target="_blank" class="btn btn-primary" href="javascript:;" ng-click="forDetail(job)" data-type="topic">查看详情</a>
                           </td>
                           <td ng-show="isStaff"><a target="_blank" class="btn btn-primary" href="javascript:;" ng-click="edit(job)" data-type="topic">编辑</a>
-                          <a target="_blank" class="btn btn-primary audit_topic_block" href="javascript:;" ng-click="delete(job)" data-type="topic" style="margin-left: 20px;">删除</a></td>
+                          <a target="_blank" class="btn btn-primary audit_topic_block" href="javascript:;" ng-click="delJobInfo(job)" data-type="topic" style="margin-left: 20px;">删除</a></td>
                         </tr>
                       </tbody>
                     </table>
